--- a/app/src/main/res/layout/activity_crea_talk.xml
+++ b/app/src/main/res/layout/activity_crea_talk.xml
@@ -24,8 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:autofillHints=""
-        android:background="#FFFFFF"
-        android:backgroundTint="#33FFBB33"
+        android:background="@drawable/textbox_style"
         android:drawableTint="@color/orange_light"
         android:hint="@string/talkHint"
         android:inputType="textLongMessage|textMultiLine"
@@ -40,8 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:autofillHints=""
-        android:background="#FFFFFF"
-        android:backgroundTint="#33FFBB33"
+        android:background="@drawable/textbox_style"
         android:drawableTint="@color/orange_light"
         android:hint="@string/linkHint"
         android:inputType="textLongMessage|textMultiLine"
@@ -53,8 +51,10 @@
 
     <Button
         android:id="@+id/B_UploadPost"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/button_style"
         android:onClick="createNewTalk"
         android:text="@string/submit"
         android:textSize="20sp"
@@ -62,4 +62,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ET_linkSource" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
