--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,11 +53,13 @@
 
     <android.widget.Button
         android:id="@+id/b_login"
+        style="@style/Widget.MaterialComponents.Button"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        android:background="@color/orange_light"
+        android:background="@drawable/button_style"
         android:onClick="loginUtente"
         android:text="@string/login"
         android:textSize="20sp"
