--- a/app/src/main/res/layout/activity_profilo.xml
+++ b/app/src/main/res/layout/activity_profilo.xml
@@ -14,11 +14,13 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="0sp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="16dp"
+            android:padding="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/SingleUserTalksRecyclerView"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -26,9 +28,9 @@
                 android:id="@+id/immagine_Profilo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:scaleType="centerCrop"
                 android:background="@drawable/default_account_image"
                 android:contentDescription="@string/immagine_schermata_profilo"
+                android:scaleType="centerCrop"
                 tools:ignore="ContentDescription" />
 
             <LinearLayout
@@ -43,7 +45,8 @@
                     android:layout_height="0dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:text="@string/nickname" />
+                    android:text="@string/nickname"
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/TV_NomeProfilo"
@@ -51,7 +54,8 @@
                     android:layout_height="0dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:text="@string/real_name" />
+                    android:text="@string/real_name"
+                    android:textSize="24sp" />
 
                 <TextView
                     android:id="@+id/TV_CognomeProfilo"
@@ -59,7 +63,8 @@
                     android:layout_height="0dp"
                     android:layout_marginEnd="8dp"
                     android:layout_weight="1"
-                    android:text="@string/real_surname" />
+                    android:text="@string/real_surname"
+                    android:textSize="24sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -69,8 +74,10 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
